@@ -103,6 +103,24 @@ name|apache
 operator|.
 name|ivy
 operator|.
+name|core
+operator|.
+name|module
+operator|.
+name|id
+operator|.
+name|ModuleRevisionId
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|ivy
+operator|.
 name|plugins
 operator|.
 name|conflict
@@ -771,6 +789,14 @@ operator|.
 name|next
 argument_list|()
 decl_stmt|;
+name|ModuleRevisionId
+name|resolvedId
+init|=
+name|node
+operator|.
+name|getResolvedId
+argument_list|()
+decl_stmt|;
 name|resolvedRevs
 operator|.
 name|add
@@ -785,12 +811,54 @@ name|resolvedRevs
 operator|.
 name|add
 argument_list|(
-name|node
-operator|.
-name|getResolvedId
-argument_list|()
+name|resolvedId
 argument_list|)
 expr_stmt|;
+comment|// in case there are extra attributes on the resolved module we also add the
+comment|// the module without these extra attributes (cfr. IVY-1236)
+if|if
+condition|(
+operator|!
+name|resolvedId
+operator|.
+name|getExtraAttributes
+argument_list|()
+operator|.
+name|isEmpty
+argument_list|()
+condition|)
+block|{
+name|resolvedRevs
+operator|.
+name|add
+argument_list|(
+name|ModuleRevisionId
+operator|.
+name|newInstance
+argument_list|(
+name|resolvedId
+operator|.
+name|getOrganisation
+argument_list|()
+argument_list|,
+name|resolvedId
+operator|.
+name|getName
+argument_list|()
+argument_list|,
+name|resolvedId
+operator|.
+name|getBranch
+argument_list|()
+argument_list|,
+name|resolvedId
+operator|.
+name|getRevision
+argument_list|()
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 return|return
 name|resolvedRevs
@@ -1095,6 +1163,37 @@ block|{
 name|cleanEvicted
 argument_list|()
 expr_stmt|;
+if|if
+condition|(
+name|node
+operator|.
+name|isRoot
+argument_list|()
+condition|)
+block|{
+return|return
+literal|false
+return|;
+block|}
+name|EvictionData
+name|evictedData
+init|=
+name|getEvictedData
+argument_list|(
+name|rootModuleConf
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|evictedData
+operator|==
+literal|null
+condition|)
+block|{
+return|return
+literal|false
+return|;
+block|}
 name|IvyNode
 name|root
 init|=
@@ -1126,24 +1225,7 @@ argument_list|,
 name|rootModuleConf
 argument_list|)
 decl_stmt|;
-name|EvictionData
-name|evictedData
-init|=
-name|getEvictedData
-argument_list|(
-name|rootModuleConf
-argument_list|)
-decl_stmt|;
 return|return
-name|root
-operator|!=
-name|node
-operator|&&
-name|evictedData
-operator|!=
-literal|null
-operator|&&
-operator|(
 operator|!
 name|resolvedRevisions
 operator|.
@@ -1159,7 +1241,6 @@ name|evictedData
 operator|.
 name|isTransitivelyEvicted
 argument_list|()
-operator|)
 return|;
 block|}
 specifier|public
