@@ -23461,6 +23461,152 @@ expr_stmt|;
 block|}
 specifier|public
 name|void
+name|testIVY1236
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|Ivy
+name|ivy
+init|=
+operator|new
+name|Ivy
+argument_list|()
+decl_stmt|;
+name|ivy
+operator|.
+name|configure
+argument_list|(
+operator|new
+name|File
+argument_list|(
+literal|"test/repositories/IVY-1236/ivysettings.xml"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|ResolveReport
+name|report
+init|=
+name|ivy
+operator|.
+name|resolve
+argument_list|(
+operator|new
+name|File
+argument_list|(
+literal|"test/repositories/IVY-1236/ivy.xml"
+argument_list|)
+operator|.
+name|toURI
+argument_list|()
+operator|.
+name|toURL
+argument_list|()
+argument_list|,
+name|getResolveOptions
+argument_list|(
+operator|new
+name|String
+index|[]
+block|{
+literal|"*"
+block|}
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|assertNotNull
+argument_list|(
+name|report
+argument_list|)
+expr_stmt|;
+name|assertNotNull
+argument_list|(
+name|report
+operator|.
+name|getUnresolvedDependencies
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"Number of unresolved dependencies not correct"
+argument_list|,
+literal|0
+argument_list|,
+name|report
+operator|.
+name|getUnresolvedDependencies
+argument_list|()
+operator|.
+name|length
+argument_list|)
+expr_stmt|;
+comment|// dependencies
+name|assertTrue
+argument_list|(
+name|getIvyFileInCache
+argument_list|(
+name|ModuleRevisionId
+operator|.
+name|newInstance
+argument_list|(
+literal|"myorg"
+argument_list|,
+literal|"modB"
+argument_list|,
+literal|"1.0"
+argument_list|)
+argument_list|)
+operator|.
+name|exists
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|getArchiveFileInCache
+argument_list|(
+literal|"myorg"
+argument_list|,
+literal|"modB"
+argument_list|,
+literal|"1.0"
+argument_list|,
+literal|"modB"
+argument_list|,
+literal|"jar"
+argument_list|,
+literal|"jar"
+argument_list|)
+operator|.
+name|exists
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|getArchiveFileInCache
+argument_list|(
+literal|"myorg"
+argument_list|,
+literal|"modB"
+argument_list|,
+literal|"1.0"
+argument_list|,
+literal|"modB-A"
+argument_list|,
+literal|"jar"
+argument_list|,
+literal|"jar"
+argument_list|)
+operator|.
+name|exists
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+specifier|public
+name|void
 name|testIVY999
 parameter_list|()
 throws|throws
