@@ -1,0 +1,32 @@
+<!--
+   Licensed to the Apache Software Foundation (ASF) under one
+   or more contributor license agreements.  See the NOTICE file
+   distributed with this work for additional information
+   regarding copyright ownership.  The ASF licenses this file
+   to you under the Apache License, Version 2.0 (the
+   "License"); you may not use this file except in compliance
+   with the License.  You may obtain a copy of the License at
+
+     http://www.apache.org/licenses/LICENSE-2.0
+
+   Unless required by applicable law or agreed to in writing,
+   software distributed under the License is distributed on an
+   "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+   KIND, either express or implied.  See the License for the
+   specific language governing permissions and limitations
+   under the License.    
+-->
+<ivy-module version="2.2" xmlns:extra="http://ant.apache.org/ivy/extra">
+    <info organisation="myorg" module="modB" revision="1.0" extra:foo="bar"/>
+    <configurations>
+        <conf name="runtime" visibility="public" />
+        <conf name="conf1" extends="runtime" />
+        <conf name="conf2" extends="runtime" />
+        <conf name="all" extends="conf1,conf2" visibility="public" />
+    </configurations>
+    <publications>
+        <artifact name="modB" type="jar" ext="jar" conf="runtime"/>
+        <artifact name="modB-A" type="jar" ext="jar" conf="conf1"/>
+    </publications>
+    <dependencies />
+</ivy-module>
